Add react component in

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,6 +6,7 @@
                  placeholder="What needs to be done?"}}
   </header>
   {{outlet}}
+  {{react-component}}
 </section>
 <footer class="info">
   <p>Double-click to edit a todo</p>
