Got material-ui working

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,6 +6,8 @@
                  placeholder="What needs to be done?"}}
   </header>
   {{outlet}}
+</section>
+<section>
   {{react-component}}
 </section>
 <footer class="info">
